fix side scroll on mobile view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,20 @@ body {
     /* overflow-x: hidden; */
 }
 
+@media only screen and (max-width: 991px) {
+    body {
+        overflow-x: hidden; /* fixes side scroll in mobile view */
+    }
+}
+  
+@media only screen and (max-width: 767px) {
+    body {
+        overflow-x: hidden; /* fixes side scroll in mobile view */
+    }
+}
+
+
+
 a {
     text-decoration: none;
     transition: var(--transition);
